crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@312.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34:56 +05:20\"', '$.datetime(\"HH24:MI:SS TZH:TZM\").type()');"
---
SelectStmt@0..88
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..86
    FuncCall@7..86
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..43
        Sconst@24..43 "'\"12:34:56 +05:20\"'"
      Ascii44@43..44 ","
      Whitespace@44..45 " "
      AConst@45..86
        Sconst@45..86 "'$.datetime(\"HH24:MI: ..."
  Ascii41@86..87 ")"
  Ascii59@87..88 ";"

