crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@313.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"10-03-2017T12:34:56\"', '$.datetime(\"dd-mm-yyyy\\\"T\\\"HH24:MI:SS\")');"
---
SelectStmt@0..92
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..90
    FuncCall@7..90
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..47
        Sconst@24..47 "'\"10-03-2017T12:34:56\"'"
      Ascii44@47..48 ","
      Whitespace@48..49 " "
      AConst@49..90
        Sconst@49..90 "'$.datetime(\"dd-mm-yy ..."
  Ascii41@90..91 ")"
  Ascii59@91..92 ";"

