crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '[1]' @? 'strict $[1.2]';"
---
SelectStmt@0..38
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..37
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..37
      TypeCast@13..18
        AConst@13..18
          Sconst@13..18 "'[1]'"
      Whitespace@18..19 " "
      Op@19..21 "@?"
      Whitespace@21..22 " "
      AConst@22..37
        Sconst@22..37 "'strict $[1.2]'"
  Ascii59@37..38 ";"

