crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@323.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"12:34\"', '$.datetime(\"HH24:MI\")');"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..58
    FuncCall@7..58
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..33
        Sconst@24..33 "'\"12:34\"'"
      Ascii44@33..34 ","
      Whitespace@34..35 " "
      AConst@35..58
        Sconst@35..58 "'$.datetime(\"HH24:MI\")'"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

