crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": [1,2,3], \"b\": [3,4,5]}' @? '$ ? (@.a[*] >  @.b[*])';"
---
SelectStmt@0..72
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..71
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..71
      TypeCast@13..43
        AConst@13..43
          Sconst@13..43 "'{\"a\": [1,2,3], \"b\":  ..."
      Whitespace@43..44 " "
      Op@44..46 "@?"
      Whitespace@46..47 " "
      AConst@47..71
        Sconst@47..71 "'$ ? (@.a[*] >  @.b[*])'"
  Ascii59@71..72 ";"

