crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@331.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"10-03-2017 12:34\"', '$.datetime(\"dd-mm-yyyy HH24:MI TZH\")');"
---
SelectStmt@0..86
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..84
    FuncCall@7..84
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..44
        Sconst@24..44 "'\"10-03-2017 12:34\"'"
      Ascii44@44..45 ","
      Whitespace@45..46 " "
      AConst@46..84
        Sconst@46..84 "'$.datetime(\"dd-mm-yy ..."
  Ascii41@84..85 ")"
  Ascii59@85..86 ";"

